<resources>
    <string name="app_name">SuperAcoustics</string>
    <string name="toast_message">On or Off</string>
    <string name="settings_ok">ok</string>
    <string name="adjust_sensitivity">Calibrate sensitivity</string>
    <string name="adjust_sensitivity_instructions">To calibrate sensitivity you will need a steady sound source and a calibrated SPL meter. Turn on the sound source and the reference meter. Adjust the sensitivity until the two dB readings match. When satisfied, press SET CALIBRATION to save.</string>
    <string name="minus_5_db">-5 dB</string>
    <string name="minus_1_db">-1 dB</string>
    <string name="plus_1_db">+1 dB</string>
    <string name="plus_5_db">+5 dB</string>
    <string name="gain_error_text">Sensitivity correction:</string>
    <string name="gain">0.0</string>
    <string name="sample_rate">Sample Rate</string>
    <string name="db_button">Calibrate SPL</string>
    <string name="measure_1">Measure SPL1</string>
    <string name="measure_2">Measure SPL2</string>
    <string name="result_button">View Results</string>
    <string name="measure_spl_instructions">"To measure sound pressure level, you will need a steady sound source and a calibrated SLM, the calibration needs to be done prior to the measurement. Turn on the sound source and press OFF to monitor and measure SPL. "</string>
    <string name="start_measure">START</string>
    <string name="measure_info_text">Each measurement will take 10 seconds, the button will be automatically toggled off when a measurement is finished. Once 5 different locations for the microphone is measured, press the "FINISH" button.</string>
    <string name="measured_spl">Average measured SPL (dBA)</string>
    <string name="SPL">0.0</string>
    <string name="finish_button">FINISH</string>
    <string name="setCalibrationButton">Set Calibration</string>
    <string name="reverbButton">Measure RT</string>
    <string name="measureTextRT">TextView</string>
    <string name="resultTextSpl1">Not measured</string>
    <string name="resultTextSpl2">Not measured</string>
    <string name="resultTextCal">0.0</string>
    <string name="resultTextRT">Not measured</string>
    <string name="stop_measure">STOP</string>
    <string name="plotT">Plot Timesignal</string>
    <string name="nameButton">OK</string>
    <string name="nameInput" />
    <string name="newButton">New Measurement</string>
    <string name="loadButton">Load Measurement</string>
    <string-array name="sample_rate_array">
        <item>Default</item>
        <item>Mic</item>
        <item>Voice Communication</item>
        <item>Voice Recognition</item>
        <item>Unprocessed</item>
    </string-array>
    <string name="editText">Type in the name of the measurement</string>
    <string name="volume">Enter the dimensions of the receiving room.</string>
    <string name="area">Surface area of the wall in m^2</string>
    <string name="plotFFT">Plot FFT</string>


    <!-- Test Strings -->
    <string name="LayoutSimpleLine1">SOUND LEVEL</string>
    <string name="LayoutSimpleLine2">Refresh:</string>
    <string name="LayoutSimpleLevel">0.0</string>

    <string name="StartingTimeRunning"></string>
    <string name="DurationTimeRunning"></string>
    <string name="ButtonRunning">RESET</string>

    <string name="LMax_label">LAMax</string>
    <string name="LAeqTimeDisplay_label">LAeq</string>
    <string name="LAeqTimeDisplay_label_simple">Sound level</string>
    <string name="LeqTimeDisplay_label">Leq</string>
    <string name="time_display_label_simple">Refresh:</string>
    <string name="interface_label">Stai visualizzando l\'interfaccia semplice, puoi passare a quella Avanzata nelle impostazioni</string>
    <string name="LMin_label">LAMin</string>
    <string name="LMax">0</string>
    <string name="LAeqTimeDisplay">0</string>
    <string name="LMin">0</string>
    <string name="LAeqRunning_label">LAeq(t)</string>
    <string name="LAeqRunning"></string>

    <string name="level">0</string>
    <string name="level_label"></string>
    <string name="level_label_dBA">dB(A)</string>

    <string name="ButtonLogTextStart">SAVE</string>
    <string name="ButtonLogTextStop">STOP</string>

    <string name="StartingTimeLog"></string>
    <string name="DurationTimeLog"></string>
    <string name="StartingTimeLogText">You are not saving data</string>
    <string name="DurationTimeLogText">You\'ll save data every:</string>
    <string name="SavingText">You\'re saving data</string>

    <string name="plot_label_SLMHistory">Storia temporale livello Live</string>
    <string name="plot_label_SLM">Livelli a barra</string>
    <string name="plot_label_ThirdOctave">Terzi di Ottava</string>
    <string name="plot_label_FFT">FFT</string>

    <string name="Days">days</string>
    <string name="Start">Start: </string>
    <string name="Duration">Duration (t): </string>
    <string name="DurationLogFile">Duration:</string>
    <string name="resultSRITextView">Not Calculated</string>
    <string name="room_1_spl">Room 1 SPL</string>
    <string name="room_2_spl">Room 2 SPL</string>
    <string name="t60_room_2">T60 Room 2</string>
    <string name="sound_reduction_index">Sound Reduction Index</string>
    <string name="blank">.</string>
    <string name="_0">0</string>
    <string name="db_a">dB(A)</string>
    <string name="settings">Settings</string>
    <string name="on">On</string>

    <string name="MeasureBackGroundButton">Measure Background Noise</string>
    <string name="resultBackgroundNoise">Background noise</string>
    <string name="Audio_source">Audio Source &amp; Windowing</string>
    <string name="hello_blank_fragment">"SuperAcoustics is an application developed to measure the sound reduction index of a wall, floor, ceiling or other building component. \nIn order to complete succesful measurements, your android phone must first be calibrated with the use of professional acoustics equipment. \nBelow you will find recommendations on how to calibrate your smartphone for the best results. "</string>
    <string name="calibration4">The idea with this calibration is that it only needs to be done before you do your first measurement with your phone. After that the settings you input are saved in your phone and there is no need to update it for future measurements. It is still possible to change the settings after initial calibration if you wish to do so.</string>
    <string name="info2">To calibrate measurements for Sound Pressure Level, it is recommended to test measuring pink noise at varying noise levels alongside a sound level meter. Do this in order to find the combination of sensitivity correction, audio source and Windowing that gives you the best result.</string>
    <string name="info3">To calibrate measurements for background noise, it is recommended to do a number of different measurements in various quiet rooms next to a sound level meter. Since the settings will not always be the same as they are for sound pressure level depending on your smartphone. These settings are saved seperately from that of the settings for sound pressure level.</string>

    <!-- TODO: Remove or change this placeholder text -->
</resources>