<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/dBTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:gravity="right"
                android:text="@string/_0"
                android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                android:textSize="36sp" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="26dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/blank"
                android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                android:textSize="36sp" />

            <TextView
                android:id="@+id/dBFractionTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0"
                android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                android:textSize="36sp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:text="@string/db_a"
                android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                android:textSize="36sp" />

        </LinearLayout>

    </LinearLayout>

    <ToggleButton
        android:id="@+id/on_off_toggle_button"
        style="@android:style/Widget.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/on"
        android:textOff="OFF"
        android:textOn="ON" />

    <Button
        android:id="@+id/setCalibrationButton"
        style="@android:style/Widget.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setCalibrationButton" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="287dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/adjust_sensitivity_instructions" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp" >

        <Button
            android:id="@+id/minus_5_db_button"
            style="@android:style/Widget.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.10"
            android:text="@string/minus_5_db" />

        <Button
            android:id="@+id/minus_1_db_button"
            style="@android:style/Widget.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.10"
            android:text="@string/minus_1_db" />

        <Button
            android:id="@+id/plus_1_db_button"
            style="@android:style/Widget.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.10"
            android:text="@string/plus_1_db" />

        <Button
            android:id="@+id/plus_5_db_button"
            style="@android:style/Widget.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.10"
            android:text="@string/plus_5_db" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/gain_error_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/gain_error_text"
            android:layout_marginStart="5dp" />

        <TextView
            android:id="@+id/gain"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="0.40"
            android:text="@string/gain" />
    </LinearLayout>

    <com.example.myapplication.PlotFFT
        android:id="@+id/plotFFT"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:padding="5dp"
        android:visibility="visible" />

</LinearLayout>