<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/dBTextView"
            android:layout_width="107dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:gravity="right"
            android:text="0"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="80dp"
            android:typeface="monospace" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="26dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="."
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="80dp"
            android:typeface="monospace" />

        <TextView
            android:id="@+id/dBFractionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="80dp"
            android:typeface="monospace" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:text="dB"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="80dp"
            android:typeface="monospace" />

    </LinearLayout>

    <ToggleButton
        android:id="@+id/on_off_toggle_button"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:checked="false"
        android:text="On" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="338dp"
        android:layout_height="107dp"
        android:layout_marginTop="5dp"
        android:text="@string/measure_spl_instructions" />

    <view
        android:id="@+id/bar_level_drawable_view"
        class="com.example.myapplication.BarLevelDrawable"
        android:layout_width="fill_parent"
        android:layout_height="35dp"></view>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="23dp">

        <TextView
            android:id="@+id/gain_error_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/gain_error_text" />

        <TextView
            android:id="@+id/gain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="0.40"
            android:text="@string/gain" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="353dp"
        android:layout_height="264dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/startButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_measure" />

            <Button
                android:id="@+id/stopButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stop_measure" />

            <TextView
                android:id="@+id/textseconds"
                android:layout_width="3dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:text="05" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Seconds" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="336dp"
            android:layout_height="84dp"
            android:text="@string/measure_info_text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/finishButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/finish_button" />

            <Button
                android:id="@+id/plotT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/plotT"
                tools:text="@string/plotT" />

            <Button
                android:id="@+id/plotFFT"
                android:layout_width="119dp"
                android:layout_height="wrap_content"
                android:text="@string/plotFFT"
                tools:text="@string/plotFFT" />
        </LinearLayout>

        <TextView
            android:id="@+id/textview3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:text="@string/measured_spl" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:gravity="top"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/measuredSPL1"
                android:layout_width="7dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:text="@string/SPL" />

            <TextView
                android:id="@+id/measuredSPL2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/SPL" />

            <TextView
                android:id="@+id/measuredSPL3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/SPL" />

            <TextView
                android:id="@+id/measuredSPL4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/SPL" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>